# RAG-minor-6

./: .env.example  .gitignore  IMPLEMENTATION_HANDOFF.txt  NEXT_AGENT_PROMPT.txt  PROGRESS.txt  README.md  project_spec.md  pyproject.toml
.github/: copilot-instructions.md
data/benchmark/: sample.jsonl
data/documents/: hallucination_detection.md  langgraph_orchestration.md  multi_hop_qa.md  rag_systems.md  treeqa_overview.md
data/graph/: facts.jsonl
data/index/: graph_facts.jsonl  vector_index.jsonl
src/treeqa/: __init__.py  cli.py  config.py  dataset_loader.py  diagnostics.py  eval.py  ingest.py  models.py  pipeline.py  state.py  workflow.py
src/treeqa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/treeqa/agents/: __init__.py  corrector.py  decomposer.py  generator.py  validator.py
src/treeqa/api/: app.py
src/treeqa/backends/: __init__.py  graph.py  llm.py  vector.py
src/treeqa/retrieval/: __init__.py  hybrid.py  scoring.py
src/treeqa/ui/: __init__.py  index.html  streamlit_app.py
temp/: IMPLEMENTATION_HANDOFF.txt  NEXT_AGENT_PROMPT.txt
tests/: conftest.py  test_adapters.py  test_config.py  test_diagnostics.py  test_eval.py  test_generator.py  test_ingest.py  test_pipeline.py  test_retriever.py  test_scoring.py  test_vector_backend.py
