[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "treeqa"
version = "0.1.0"
description = "Hallucination-aware multi-hop RAG scaffold"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.6,<3",
  "streamlit>=1.34,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
]
providers = [
  "neo4j>=5.18,<6",
  "qdrant-client>=1.9,<2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
